syntax = "proto3";

package api.push.v1;

//import "google/api/annotations.proto";

option go_package = "github.com/WH-5/push-service/api/push/v1;v1";
option java_multiple_files = true;
option java_package = "api.push.v1";

service Push {
	rpc PushMsg(PushMsgRequest)returns(PushMsgReply);

}
message PushMsgRequest{

}
message PushMsgReply{

}